# eval-harness

./: .gitignore  README.md
apps/api/: main.py  pyproject.toml  railway.json  requirements.txt
apps/api/app/: db.py  extraction.py  models.py  prompt_templates.py  run_jobs.py  schema.py  schemas.py  scoring.py  services.py
apps/api/scripts/: run_eval.py  seed.py  seed_data.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analysis/: page.tsx
apps/web/app/comparison/: page.tsx
apps/web/app/documents/[id]/: page.tsx
apps/web/app/prompt/: page.tsx
apps/web/components/: page-shell.tsx  site-nav.tsx
apps/web/components/analysis/: analysis-hero.tsx  comparison-chart.tsx  comparison-table.tsx  failure-modes-table.tsx  field-bars.tsx  next-section.tsx  prompt-comparison-panel.tsx
apps/web/components/dashboard/: about-demo.tsx  accuracy-ring.tsx  animated-hero.tsx  documents-table.tsx  grid-background.tsx  stats-row.tsx  type-accuracy.tsx
apps/web/components/documents/: doc-pill.tsx  document-hero.tsx  field-comparison.tsx
apps/web/components/ui/: table.tsx
apps/web/lib/: api.ts  comparison.ts  document-analysis.ts  document-notes.ts  field-rows.ts  fields.ts  motion.tsx
scripts/: run_eval.sh
