[project]
name = "extractbench-api"
version = "0.1.0"
description = "ExtractBench API — evaluation harness for structured extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.55.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "instructor>=1.7.0",
]
